--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -10,9 +10,9 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  pyinstaller-build:
 
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     strategy:
       fail-fast: false
       matrix:
@@ -35,7 +35,7 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with py
+    - name: Create executable
       run: |
         treeviewCSV_general.py
         treeviewCSV_crowdegress.py
