--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -37,5 +37,5 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Create executable
       run: |
-        treeviewCSV_general.py
-        treeviewCSV_crowdegress.py
+        pyinstaller -F treeviewCSV_general.py
+        pyinstaller -F treeviewCSV_crowdegress.py
